feat: developing hooks with apollo

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DATABASE_URL = mongodb://localhost:27017/berry
+# DATABASE_URL = mongodb://localhost:27017/berry
 GRAPHQL_URI = http://localhost:5000/graphql
+DATABASE_URL = mongodb://1.229.93.240:27017/tony
